# parallel-prog

./: .gitignore
lab1/: .gitignore  grafik.py  main.cpp  matrixB.txt  report.md  verify_result.py
lab2/: main2.cpp  report.md  verify.py
lab2/matrix_data/: matrixA_1000.txt  matrixA_500.txt  matrixB_1000.txt  matrixB_500.txt
lab2/results/: result_500.txt  results.txt
lab3/: CMakeLists.txt  main.cpp  report.md  verify.py
